--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -365,6 +365,7 @@
                                                     <a class="localize__item__link js-localize-item{% if country.iso_code == localization.country.iso_code %} selected{% endif %}" href="#" {% if country.iso_code == localization.country.iso_code %}aria-current="true"{% endif %} data-value="{{ country.iso_code }}">{{ country.name }} <span class="localization-form__country">({{ country.currency.iso_code }} {{ country.currency.symbol }})</span></a>
                                                 </li>
                                             {%- endfor -%}
+                                            <li>Test</li>
                                         </ul>
                                     </div>
 
