--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -323,7 +323,7 @@
 
     <div class="footer__bottom">
         <div class="container container--full">
-
+            <p>Test</p>
             <div class="footer__bottom__left">
                 {%- assign country_selector = false -%}
                 {%- assign language_selector = false -%}
@@ -365,7 +365,6 @@
                                                     <a class="localize__item__link js-localize-item{% if country.iso_code == localization.country.iso_code %} selected{% endif %}" href="#" {% if country.iso_code == localization.country.iso_code %}aria-current="true"{% endif %} data-value="{{ country.iso_code }}">{{ country.name }} <span class="localization-form__country">({{ country.currency.iso_code }} {{ country.currency.symbol }})</span></a>
                                                 </li>
                                             {%- endfor -%}
-                                            <li>Test</li>
                                         </ul>
                                     </div>
 
